fix: accessibility issue with H4s out of alignment #218

--- a/site/src/styles/global.css
+++ b/site/src/styles/global.css
@@ -82,6 +82,12 @@ h3 {
     font-size: 3.4rem;
 }
 
+h4 {
+    font-family: var(--heading-font-family);
+    font-weight: var(--heading-font-weight);
+    font-size: 2.4rem;
+}
+
 a {
     color: var(--highlight);
     text-decoration: none;
@@ -165,6 +171,14 @@ article p span.gatsby-resp-image-wrapper + em {
     margin-top: calc(0.25 * var(--gutter));
 }
 
+/* some elements for when you are in an aside in the article */
+article aside h2 {
+    display: block;
+    font-size: 2.4rem;
+    color: var(--base);
+    background-color: inherit;
+    margin: calc(0.5 * var(--gutter)) var(--gutter);
+}
 
 /* Some definitions for the form */
 article form label {
